--- a/lib/styles/signup_style.css
+++ b/lib/styles/signup_style.css
@@ -26,7 +26,7 @@ body {
     text-align: center;
 }
 
-#lsignupBodyContainer {
+#signupBodyContainer {
     width: 85%;
     margin: 0px auto 0px auto;
 }
