--- a/lib/styles/signup_style.css
+++ b/lib/styles/signup_style.css
@@ -37,6 +37,7 @@ body {
 
 }
 
+input[type=email],
 input[type=text],
 input[type=password] {
     width: 100%;
@@ -48,6 +49,7 @@ input[type=password] {
     border-radius: 25px;
 }
 
+input[type=email]:focus,
 input[type=text]:focus,
 input[type=password]:focus {
     border-radius: 25px;
