--- a/lib/styles/forgot_password_style.css
+++ b/lib/styles/forgot_password_style.css
@@ -26,6 +26,12 @@ body {
     text-align: center;
 }
 
+#resetpwheader {
+    font-size: 1.5em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+}
+
 #forgotPwdBodyContainer {
     width: 85%;
     margin: 0px auto 0px auto;
@@ -79,4 +85,36 @@ input[type=password]:focus {
     background-position: right center;
     color: #fff;
     text-decoration: none;
+}
+
+.submitButton {
+    background-image: linear-gradient(to right, #4776E6 0%, #8E54E9 51%, #4776E6 100%)
+}
+
+.submitButton {
+    width: 100%;
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 25px;
+    border: none;
+    display: block;
+    font-size: 1em;
+}
+
+.submitButton:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+}
+
+#emailstyle {
+    font-size: 1em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
