--- a/lib/styles/login_style.css
+++ b/lib/styles/login_style.css
@@ -1,88 +1,341 @@
-body {
-    background-image: url("../../images/bg-01.jpg");
-    background-size: 100%;
-}
-
-#loginContainer {
-    width: 35%;
-    height: 90%;
-    padding: 1em;
-    margin: 2em auto 0px auto;
-    background-color: white;
-    border-radius: 25px;
-}
-
+/*//////////////////////////////////////////////////////////////////
+[ LOGO ]*/
 #logoImageContainer {
-    text-align: center;
+    text-align: center; 
 }
 
 #logoImage {
-    width: 8em;
+  max-height: 900px;
+  max-width: 900px;
 }
 
-#loginHeader {
-    font-size: 2.5em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-}
+/*//////////////////////////////////////////////////////////////////
+[ FONT ]*/
 
-#loginBodyContainer {
-    width: 85%;
-    margin: 0px auto 0px auto;
-}
-
-.loginLabel {
-    font-size: 1.0em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-    border-radius: 25px;
-}
-
-input[type=text]:focus,
-input[type=password]:focus {
-    border-radius: 25px;
-    background-color: #eeeeee;
-    outline: none;
-}
-
-#forgotPwdLabel {
-    font-size: 1.0em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: right;
-}
-
-#signupLabel {
-    font-size: 1.0em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-}
-
-#forgotPwdLink,
-#signupLink {
+@font-face {
+    font-family: Raleway-Regular;
+    src: url('../fonts/raleway/Raleway-Regular.ttf'); 
+  }
+  
+  @font-face {
+    font-family: Raleway-Medium;
+    src: url('../fonts/raleway/Raleway-Medium.ttf'); 
+  }
+  
+  @font-face {
+    font-family: Raleway-SemiBold;
+    src: url('../fonts/raleway/Raleway-SemiBold.ttf'); 
+  }
+  
+  @font-face {
+    font-family: Raleway-Bold;
+    src: url('../fonts/raleway/Raleway-Bold.ttf'); 
+  }
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ RESTYLE TAG ]*/
+  
+  * {
+      margin: 0px; 
+      padding: 0px; 
+      box-sizing: border-box;
+  }
+  
+  body, html {
+    background-image: url("../../images/bg-01.jpg");
+    background-size: 100%;
+      height: 100%;
+      font-family: Raleway-Regular, sans-serif;
+  }
+  
+  /*---------------------------------------------*/
+  a {
+      font-family: Raleway-Regular;
+      font-size: 14px;
+      line-height: 1.7;
+      color: #666666;
+      margin: 0px;
+      transition: all 0.4s;
+      -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
     text-decoration: none;
-    color: grey;
-}
+  }
+  
+  a:focus {
+      outline: none !important;
+      text-decoration: none;
+  }
+  
+  a:hover {
+      text-decoration: none;
+      color:violet;
+  }
+  
+  /*---------------------------------------------*/
+  h1,h2,h3,h4,h5,h6 {
+      margin: 0px;
+  }
+  
+  p {
+      font-family: Raleway-Regular;
+      font-size: 14px;
+      line-height: 1.7;
+      color: #666666;
+      margin: 0px;
+  }
+  
+  ul, li {
+      margin: 0px;
+      list-style-type: none;
+  }
+  
+  
+  /*---------------------------------------------*/
+  input {
+      outline: none;
+      border: none;
+  }
+  
+  textarea {
+    outline: none;
+    border: none;
+  }
+  
+  textarea:focus, input:focus {
+    border-color: transparent !important;
+  }
+  
+  input:focus::-webkit-input-placeholder { color:transparent; }
+  input:focus:-moz-placeholder { color:transparent; }
+  input:focus::-moz-placeholder { color:transparent; }
+  input:focus:-ms-input-placeholder { color:transparent; }
+  
+  textarea:focus::-webkit-input-placeholder { color:transparent; }
+  textarea:focus:-moz-placeholder { color:transparent; }
+  textarea:focus::-moz-placeholder { color:transparent; }
+  textarea:focus:-ms-input-placeholder { color:transparent; }
+  
+  input::-webkit-input-placeholder { color: #999999;}
+  input:-moz-placeholder { color: #999999;}
+  input::-moz-placeholder { color: #999999;}
+  input:-ms-input-placeholder { color: #999999;}
+  
+  textarea::-webkit-input-placeholder { color: #999999;}
+  textarea:-moz-placeholder { color: #999999;}
+  textarea::-moz-placeholder { color: #999999;}
+  textarea:-ms-input-placeholder { color: #999999;}
+  
+  label {
+    display: block;
+    margin: 0;
+  }
+  
+  /*---------------------------------------------*/
+  button {
+      outline: none !important;
+      border: none;
+      background: transparent;
+  }
+  
+  button:hover {
+      cursor: pointer;
+  }
+  
+  iframe {
+      border: none !important;
+  }
+  
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ Utility ]*/
+  .txt1 {
+    font-family: Raleway-SemiBold;
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.4;
+    text-transform: capitalize;
+  }
+  
+  .txt2 {
+    font-family: Raleway-Regular;
+    font-size: 1.0em;
+    color: black;
+    line-height: 1.4;
+  }
+  
+  .txt3 {
+    font-family: Raleway-Regular;
+    font-size: 13px;
+    /*color: #555555;*/
+    color:grey;
+    line-height: 1.4;
+    
+  }
+  
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ login ]*/
+  
+  .limiter {
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .loginContainer {
+    width: 100%;  
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+  }
+  
+  
+  .wrap-login100 {
+    width: 560px;
+    background: white;
+    border-radius: 40px;
+    position: relative;
+  }
+  
+  
+  /*==================================================================
+  [ Form ]*/
+  
+  .login100-form {
+    width: 100%;
+  }
+  
+  .loginTittle{
+    font-family: 'Poppins';
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    display: block;
+  }
+  
+  
+  
+  /*------------------------------------------------------------------
+  [ Input ]*/
+  
+  .wrap-input100 {
+    width: 100%;
+    position: relative;
+    background: #f1f1f1;
+    /*border: 1px solid #e6e6e6;*/
+    border-radius: 25px;
+  }
+  
+  
+  /*---------------------------------------------*/
+  .input100 {
+    font-family: Raleway-Medium;
+    color: #555555;
+    line-height: 1.2;
+    font-size: 18px;
+  
+    display: block;
+    width: 100%;
+    /*background: transparent;*/
+    background: #e6e6e6;
+    height: 55px;
+    /*padding: 0 25px 0 25px;*/
+    border-radius: 10px;
+    padding: 0 30px 0 68px;
+  }
+  /*------------------------------------------------------------------
+  [ Focus Input ]*/
 
-#forgotPwdLink:hover,
-#signupLink:hover {
-    color: #aaaaaa;
-}
-
-.loginBtn {
-    background-image: linear-gradient(to right, #4776E6 0%, #8E54E9 51%, #4776E6 100%)
-}
-
-.loginBtn {
+  .focus-input100 {
+    display: block;
+    position: absolute;
+    border-radius: 25px;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 0px 0px;
+    /*color: rgba(87,184,70, 0.8);*/
+  }
+  
+  .input100:focus + .focus-input100 {
+    -webkit-animation: anim-shadow 0.5s ease-in-out forwards;
+    animation: anim-shadow 0.5s ease-in-out forwards;
+  }
+  
+  @-webkit-keyframes anim-shadow {
+    to {
+      box-shadow: 0px 0px 70px 25px;
+      opacity: 0;
+    }
+  }
+  
+  @keyframes anim-shadow {
+    to {
+      box-shadow: 0px 0px 70px 25px;
+      opacity: 0;
+    }
+  }
+  
+  .symbol-input100 {
+    font-size: 15px;
+  
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    border-radius: 25px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 35px;
+    pointer-events: none;
+    color: #666666;
+  
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+  
+  .input100:focus + .focus-input100 + .symbol-input100{
+    color:violet;
+    padding-left: 28px;
+  }
+  
+  
+  /*------------------------------------------------------------------
+  [ Button ]*/
+  .conatinerLoginButton {
+    width: 100%;
+    padding-bottom: 20px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  
+  .logIn {
+    background: linear-gradient(to right, #4776E6 0%, #8E54E9 51%, #4776E6 100%);
     width: 100%;
     margin: 10px;
     padding: 15px 45px;
@@ -96,10 +349,125 @@ input[type=password]:focus {
     border: none;
     display: block;
     font-size: 1em;
+      /*text-shadow: 2px 2px 4px #685D5F;
+      height: 50px;
+      color: white;
+      border: none;
+      border-radius: 24px;
+      margin-top: 10px;
+      margin-bottom: 10px;*/
+    }
+  
+    .logIn:hover {
+      /*background: linear-gradient(to right, #C8D6CA, #FFFFFF);
+      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);*/
+      background-position: right center;
+      opacity: 0.5;
+      text-decoration: none;
+    }
+  
+    .logIn:active {
+        box-shadow: 0 5px #666;
+          transform: translateY(4px);
+    }
+  
+  /*------------------------------------------------------------------
+  [ SIGNUP LINK ]*/
+  #signupLabel {
+    padding: 20px;
+    font-size: 1.0em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
 
-.loginBtn:hover {
-    background-position: right center;
-    color: #fff;
+#signupLink {
     text-decoration: none;
+    color: grey;
 }
+
+
+
+
+  /*------------------------------------------------------------------
+  [ Alert validate ]*/
+  
+  .validate-input {
+    position: relative;
+  }
+  
+  .alert-validate .btn-show-pass {
+    visibility: hidden;
+  }
+  
+  .alert-validate::before {
+    content: attr(data-validate);
+    position: absolute;
+    max-width: 70%;
+    background-color: #fff;
+    border: 1px solid #c80000;
+    border-radius: 3px;
+    padding: 4px 25px 5px 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 12px;
+    pointer-events: none;
+  
+    font-family: Raleway-Medium;
+    color: #c80000;
+    font-size: 14px;
+    line-height: 1.4;
+    text-align: left;
+  
+    visibility: hidden;
+    opacity: 0;
+  
+    -webkit-transition: opacity 0.4s;
+    -o-transition: opacity 0.4s;
+    -moz-transition: opacity 0.4s;
+    transition: opacity 0.4s;
+  }
+  
+  .alert-validate::after {
+    content: "\f12a";
+    font-family: FontAwesome;
+    display: block;
+    position: absolute;
+    color: #c80000;
+    font-size: 18px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 18px;
+  }
+  
+  .alert-validate:hover:before {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  @media (max-width: 992px) {
+    .alert-validate::before {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+  
+  
+  /*//////////////////////////////////////////////////////////////////
+  [ Responsive ]*/
+  
+  @media (max-width: 576px) {
+    .wrap-login100 {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+
+ 
